# pacman-engine

./: .gitignore  CMakeLists.txt  README.md  pacman.sln
examples/: CMakeLists.txt
examples/game_state_example/: CMakeLists.txt  main.cpp  sample_game_state.cpp  sample_game_state.h
game_state_example/: game_state_example.cpp  game_state_example.vcxproj  game_state_example.vcxproj.filters  main.cpp  sample_game_state.cpp  sample_game_state.h
lib/: CMakeLists.txt  Config.h.in
lib/include/: audio_context.hpp  game.hpp  game_state.hpp  graphics_context.hpp  pacman.h  pacman_defs.hpp  user_graphics_context.hpp  user_image.hpp
lib/include/mathgl/: mat3.h  math3d.h  quat.h
lib/include/pacman/: Atlas.h  CallbackConnection.h  Color.h  Config.h  FileManager.h  FileManager.h.autosave  Game.h  GameScene.h  Geometry.h  GlobalFileManager.h  GlobalTextureManager.h  GraphicsContext.h  InputManager.h  Node.h  Sprite.h  TaskQueue.h  Texture.h  TextureFrame.h  TextureManager.h  Time.h  Types.h  array_view.h  audio_context.hpp  base_game_state.hpp  base_graphics_context.hpp  game.hpp  game_state.hpp  graphics_context.hpp  image.hpp  pacman_defs.hpp
lib/include/pacman/mathgl/: mat2.h  mathgl.h  vec2.h  vec3.h  vec4.h
lib/src/: Atlas.cpp  FileManager.cpp  Game.cpp  Node.cpp  Sprite.cpp  TaskQueue.cpp  TextureManager.cpp  base_game_state.cpp  game.cpp
lib/src/opengl/: opengl_context.cpp  opengl_context.hpp  opengl_image.cpp  opengl_image.hpp
lib/src/platform/emscripten/: FileManager.cpp  GlobalFileManager.cpp  GlobalTextureManager.cpp  MainLoop.cpp
lib/src/platform/linux/: FileManager.cpp  GlobalFileManager.cpp  GlobalTextureManager.cpp  MainLoop.cpp  TextureManager.cpp
lib/src/platform/opengl/: Texture.cpp
lib/src/platform/sdl/: GraphicsContext.cpp  InputManager.cpp
lib/src/platform/sdl2/: GraphicsContext.cpp  InputManager.cpp
lib/src/sdl/: sdl_graphics_context.cpp  sdl_graphics_context.hpp
pacman/: audio_context.hpp  base_game_state.cpp  base_game_state.hpp  game.cpp  game.hpp  game_state.cpp  game_state.hpp  graphics_context.hpp  pacman.vcxproj  pacman.vcxproj.filters  pacman_defs.hpp  user_game_state.cpp  user_game_state.hpp  user_graphics_context.hpp  user_image.hpp
pacman/mathgl/: mat2.h  mat3.h  mat4.h  quat.h  vec2.h  vec3.h  vec4.h
pacman/opengl/: opengl_context.cpp  opengl_context.hpp  opengl_image.cpp  opengl_image.hpp
pacman/sdl/: sdl_graphics_context.cpp  sdl_graphics_context.hpp
tests/: CMakeLists.txt
tests/draw_sprite/: CMakeLists.txt  main.cpp
tests/loading_file/: CMakeLists.txt  main.cpp
tests/loading_texture/: CMakeLists.txt  main.cpp
tests/push_and_exit/: CMakeLists.txt  main.cpp
tests/rocket/: CMakeLists.txt  main.cpp
tests/run_and_exit/: CMakeLists.txt  main.cpp
tests/switch_scene/: CMakeLists.txt  main.cpp
